# wow-fishing-classic

./: .gitignore  LICENSE  README.md  pyproject.toml  run-dev-test-flask-v2.ps1  start-classic.ps1  start-retail.ps1  yolo-config.yaml
develop/: test-flask-v2.py  test-flask.py  test-live-detect.ipynb  test-pytorch.ipynb  test-rocm.ipynb  train-test-split.ipynb  v1-terminalapp.py  v2-flaskapp.py  win32.ipynb  win32.py
src/: config.json  logger.py  main.py  train.ipynb
