[tool.poetry]
name = "wow-fishing-classic"
version = "1.0.0"
description = ""
authors = ["Maximilian Neudert <max@neudert.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
pynput = "^1.8.1"
torch = { url = "https://download.pytorch.org/whl/cu128/torch-2.7.1%2Bcu128-cp313-cp313-win_amd64.whl"}
torchaudio = { url = "https://download.pytorch.org/whl/cu128/torchaudio-2.7.1%2Bcu128-cp313-cp313-win_amd64.whl"}
torchvision = { url = "https://download.pytorch.org/whl/cu128/torchvision-0.22.1%2Bcu128-cp313-cp313-win_amd64.whl"}
flask = "^3.1.1"

[tool.poetry.group.dev.dependencies]
ipython = "^9.4"
ipykernel = "^6.30"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
